Fix border color in StudyList table (0.2.8)

--- a/src/basic/paginationArea/PaginationArea.styl
+++ b/src/basic/paginationArea/PaginationArea.styl
@@ -8,6 +8,7 @@
   --ui-gray-darkest: #14202A;
   --ui-gray-darker: #151A1F;
   --ui-gray-light: #516873;
+  --ui-gray-lighter: #436270;
   --primary-background-color: #000000;
 }
 
