--- a/src/studyList/StudyList.styl
+++ b/src/studyList/StudyList.styl
@@ -169,8 +169,8 @@ placeholder-color(c)
           line-height: $body-cell-height
           color: var(--table-text-primary-color)
           font-weight: 300
-          border-top: 1px solid var(--ui-border-color-active)
-          border-bottom: 1px solid var(--ui-border-color-active)
+          border-top: 1px solid var(--ui-gray-lighter)
+          border-bottom: 1px solid var(--ui-gray-lighter)
           white-space: nowrap
           transition(all 0.1s ease)
 
@@ -183,8 +183,8 @@ placeholder-color(c)
 
           td
             // This selector is necessary to override bootstrap's 'table' class
-            border-top: 1px solid var(--ui-border-color-active)
-            border-bottom: 1px solid var(--ui-border-color-active)
+            border-top: 1px solid var(--ui-gray-lighter)
+            border-bottom: 1px solid var(--ui-gray-lighter)
             background-color: var(--table-hover-color)
 
 @media only screen and (max-width: 1362px)
@@ -222,7 +222,7 @@ placeholder-color(c)
 @media only screen and (max-width: 1069px)
   .theadBackground
     height: 101px
-  
+
   .studylist-pagination > .row
     margin-right: 0;
 
