feat(quickSwtich): Fix layout issues and animation

--- a/src/QuickSwitch/QuickSwitch.styl
+++ b/src/QuickSwitch/QuickSwitch.styl
@@ -59,6 +59,9 @@
     text-align: center
     transition: opacity 0.3s ease
 
+  .series-switch
+    padding-right: 10px;
+
   .series-switch,
   .study-switch
     float: left
