--- a/src/ScrollableArea/ScrollableArea.styl
+++ b/src/ScrollableArea/ScrollableArea.styl
@@ -40,7 +40,8 @@
     &:after
       color: var(--active-color);
       display: block
-      font-family: FontAwesome
+      font-family: 'Font Awesome 5 Free'
+      font-weight: 600
       font-size: 20px
       text-align: center
       transition: color 0.3s ease
