fix(measurementTable): Missing font style on header

--- a/src/MeasurementTable/MeasurementTable.styl
+++ b/src/MeasurementTable/MeasurementTable.styl
@@ -28,6 +28,8 @@
       margin-left: 9px;
       padding-left: 9px;
       width: 90px;
+      font-size: 14px;
+      line-height: 20px;
       border-left: 1px solid var(--text-secondary-color);
       color: var(--text-primary-color);
 
