fix(optionalOverlays): adding viewport as relative as the overlays are floating on them

--- a/src/LayoutChooser/LayoutManager.css
+++ b/src/LayoutChooser/LayoutManager.css
@@ -1,6 +1,6 @@
 .viewport-container {
   float: left;
-
+  position: relative;
   border: var(--viewport-border-thickness) solid var(--ui-border-color);
 }
 
