fix(quickSwtich): Quick study switch was going out of page viewport

--- a/src/QuickSwitch/QuickSwitch.styl
+++ b/src/QuickSwitch/QuickSwitch.styl
@@ -78,8 +78,8 @@
 
   .study-browser
     left: 0
-    margin-top: 100px
-    max-height: calc(100vh - 100px)
+    padding-top: 60px;
+    max-height: calc(100vh - 60px);
     transform-origin: 1em calc(1em + 17px)
     width: 300px
 
