--- a/example/src/theme-tide.css
+++ b/example/src/theme-tide.css
@@ -49,4 +49,5 @@
   --calendar-day-border-color: #d3d3d3;
   --calendar-day-active-hover-background-color: #516873;
   --calendar-main-color: #263340;
+  --viewport-border-thickness: 1px;
 }
