--- a/src/viewer/ToolbarButton.styl
+++ b/src/viewer/ToolbarButton.styl
@@ -3,7 +3,7 @@
   color: var(--default-color);
   float: left;
   text-align: center;
-  padding: 0 1rem;
+  padding: 0 10px;
   cursor: pointer;
 
   -webkit-touch-callout: none; /* iOS Safari */
