feat(toolbarSection): Adding expandableMenu integrated with it

--- a/src/viewer/ExpandableToolMenu.styl
+++ b/src/viewer/ExpandableToolMenu.styl
@@ -4,6 +4,8 @@
 
 .tooltip-toolbar-overlay
   margin-top 40px
+  background-color: var(--primary-background-color);
+  border-radius: 8px;
 
   .tooltip-arrow
     display none
