--- a/src/components/userPreferences/UserPreferences.styl
+++ b/src/components/userPreferences/UserPreferences.styl
@@ -1,7 +1,7 @@
-@import '../design/styles/common/form.styl'
-@import '../design/styles/common/navbar.styl'
-@import '../design/styles/common/state.styl'
-@import '../design/styles/common/global.styl'
+@import './../../design/styles/common/form.styl'
+@import './../../design/styles/common/navbar.styl'
+@import './../../design/styles/common/state.styl'
+@import './../../design/styles/common/global.styl'
 
 .modal-body
   overflow: hidden
