Replace fa-* classes with Icon Component

--- a/src/components/studyList/StudyList.styl
+++ b/src/components/studyList/StudyList.styl
@@ -79,7 +79,7 @@ placeholder-color(c)
   position: absolute
   z-index: 2
 
-  .loadingTextDiv
+  .loading-text
     color: var(--table-text-secondary-color)
     font-size: 30px
 
