--- a/src/components/roundedButtonGroup/RoundedButtonGroup.css
+++ b/src/components/roundedButtonGroup/RoundedButtonGroup.css
@@ -24,6 +24,7 @@
   background-color: var(--ui-gray-dark);
   border: 2px solid var(--ui-border-color-dark);
   color: var(--text-secondary-color);
+  fill: var(--text-secondary-color);
   display: flex;
   font-size: 11px;
   font-weight: 500;
@@ -37,10 +38,10 @@
   z-index: 1;
 }
 
-.roundedButtonWrapper .roundedButton svg {
+/* .roundedButtonWrapper .roundedButton svg {
   fill: var(--default-color);
   stroke: var(--default-color);
-}
+} */
 
 .roundedButtonWrapper
   .roundedButton
@@ -81,17 +82,13 @@
 .roundedButtonWrapper:hover .roundedButton {
   background-color: var(--box-background-color);
   color: var(--ui-gray-dark);
+  fill: var(--ui-gray-dark);
 }
 
 .roundedButtonWrapper.active .roundedButton {
   background-color: var(--active-color);
   border-color: var(--ui-border-color-active);
   color: var(--ui-gray-dark);
-  z-index: 2;
-}
-
-.roundedButtonWrapper:hover .roundedButton svg,
-.roundedButtonWrapper.active .roundedButton svg {
   fill: var(--ui-gray-dark);
-  stroke: var(--ui-gray-dark);
+  z-index: 2;
 }
