--- a/src/elements/form/Select.css
+++ b/src/elements/form/Select.css
@@ -71,6 +71,12 @@
   border-bottom: 1px solid #ccc;
 }
 
+.dd-item svg {
+  width: 22px;
+  height: 22px;
+  margin-right: 15px;
+}
+
 .dd-item:hover {
   text-decoration: none;
   background: #eee;
