feat(ThumbnailEntry): Add altImageText prop fallback for display sets where no image thumbnail can be displayed

--- a/src/components/studyBrowser/ThumbnailEntry.styl
+++ b/src/components/studyBrowser/ThumbnailEntry.styl
@@ -9,6 +9,25 @@
   .p-x-1
     padding: 0 1rem
 
+  .alt-image-text
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-background-color);
+    box-shadow: inset 0 0 0 1px var(--ui-border-color-dark);
+    border: 5px solid transparent;
+    border-radius: 12px;
+    height: 135px;
+    margin: 0 auto;
+    padding: 5px;
+    position: relative;
+    transition: var(--sidebar-transition);
+    width: 217px;
+    display: flex;
+
+    h1
+      text-align: center
+      color: var(--text-primary-color);
+
   .series-details
     display: flex;
     flex-direction: row;
