--- a/src/components/measurementTable/MeasurementTable.styl
+++ b/src/components/measurementTable/MeasurementTable.styl
@@ -22,7 +22,7 @@
   .measurementTableHeader
     padding-left: 45px;
 
-    .measurementTableHeaderItem  
+    .measurementTableHeaderItem
       display: inline-block;
       margin-top: 9px;
       margin-left: 9px;
@@ -55,7 +55,7 @@
         height: 40px;
 
       svg
-        fill: #e29e4a;
+        color: #e29e4a;
         width: 22px;
         height: 20px;
         pointer-events: inherit;
