fix(StudyList.js StudyList.styl): (empty) should show up in the Study List when Patient Name is miss
#494

--- a/src/components/studyList/StudyList.styl
+++ b/src/components/studyList/StudyList.styl
@@ -178,6 +178,9 @@ placeholder-color(c)
           white-space: nowrap
           transition(all 0.1s ease)
 
+          &.emptyCell
+            color: #516873
+
           &.emptyValue
             color: var(--ui-gray-light)
 
@@ -255,6 +258,7 @@ placeholder-color(c)
             width: auto
 
       tbody > tr > td
+
         &:first-child
           padding-left: $tablePaddingMediumScreen
 
