--- a/src/components/measurementTable/MeasurementTable.styl
+++ b/src/components/measurementTable/MeasurementTable.styl
@@ -81,6 +81,7 @@
       border-bottom-right-radius: 7px;
 
       ol
+        margin-top: auto;
         padding-inline-start: 20px;
         padding-top: 10px;
         padding-bottom: 10px;
