--- a/src/design/styles/common/modal.styl
+++ b/src/design/styles/common/modal.styl
@@ -14,6 +14,7 @@
     .dialog-separator-before,
     .dialog-separator-after
       position: relative
+      height: 40px;
 
     .dialog-separator:before,
     .dialog-separator:after,
@@ -44,13 +45,13 @@
       ::-webkit-scrollbar {
         width: 6px;
         background-color: var(--ui-gray-dark);
-      } 
+      }
 
       ::-webkit-scrollbar-thumb {
         background-color: var(--ui-gray-light);
         border-radius: 5px;
       }
-      
+
     .modal-header
       border-bottom-width: 3px
       border-bottom-style: solid
