Fixes css problems

--- a/src/components/measurementTable/MeasurementTableItem.styl
+++ b/src/components/measurementTable/MeasurementTableItem.styl
@@ -40,11 +40,17 @@
     border-left: 1px solid var(--text-secondary-color);
     color: var(--text-primary-color);
 
+  .itemIndex
+    -webkit-box-sizing: initial;
+    -moz-box-sizing: initial;
+    box-sizing: initial;
+
   &.hasWarnings
     .itemIndex
       opacity: 1
       background-color: #e29e4a;
       color: #fff;
+
     .warning-icon
       display: block;
       margin: 7px auto 0;
