--- a/src/components/tableList/TableListItem.styl
+++ b/src/components/tableList/TableListItem.styl
@@ -31,6 +31,9 @@
     margin-right: 5px
     padding: 10px
     text-align: center
+    -webkit-box-sizing: initial;
+    -moz-box-sizing: initial;
+    box-sizing: initial;
 
   .itemContent
     flex: 1
