docs(translation): Add a way to switch the language of the components in docs (#105)
* decouple language switch component

* create languageSwitcher component

* add a way to switch language in the documentation

* Update translating.mdx

* update docs

* create select component into sidebar

* refactoring languageSwitcher

--- a/src/components/languageSwitcher/LanguageSwitcher.styl
+++ b/src/components/languageSwitcher/LanguageSwitcher.styl
@@ -1,6 +1,4 @@
-@import './UserPreferences.styl'
-
 .language-select
   color: var(--primary-background-color)
   display: block
-  width: 100%
+  min-width: 150px
