--- a/src/design/styles/common/navbar.styl
+++ b/src/design/styles/common/navbar.styl
@@ -43,3 +43,15 @@
 
       &:after
         background-color: var(--active-color)
+
+.nav
+  padding-left: 0;
+  list-style: none;
+
+  > li
+    position: relative;
+    display: block;
+
+  > li
+    float: left;
+    margin-bottom: -1px;
