--- a/src/components/tooltip/Tooltip.styl
+++ b/src/components/tooltip/Tooltip.styl
@@ -1,3 +1,5 @@
+@import './../../design/styles/common/global.styl'
+
 .tooltip
   position: absolute;
   z-index: 1070;
@@ -85,12 +87,6 @@
   border-color: transparent;
   border-style: solid;
 }
-
-.fade
-  opacity: 0;
-  -webkit-transition: opacity .15s linear;
-  -o-transition: opacity .15s linear;
-  transition: opacity .15s linear;
 
 .tooltip.in
   opacity: .9;
