--- a/src/components/userPreferencesModal/HotKeysPreferences.styl
+++ b/src/components/userPreferencesModal/HotKeysPreferences.styl
@@ -1,3 +1,14 @@
-.col-md-6
-  width: 50%;
-  float: left;
+.HotKeysPreferences
+  display: flex;
+  margin-right: -15px;
+  margin-left: -15px;
+
+  .column
+    width: 50%;
+    padding-right: 15px;
+    padding-left: 15px;
+
+  .column-full
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
