--- a/src/design/styles/common/form.styl
+++ b/src/design/styles/common/form.styl
@@ -12,6 +12,7 @@
 
     td
       line-height: 18px
+      padding: 0;
 
   // TODO: imported this from merged-styles.css
   .p-r-1
@@ -80,3 +81,37 @@
     height: 30px
     line-height: 16px
     padding: 8px 9px 6px
+
+.form-control
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+
+  &:focus
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+
+  &::-ms-expand
+    border: 0;
+    background-color: transparent;
+
+  &[disabled],
+  &[readonly],
+  fieldset[disabled] &
+    background-color: @input-bg-disabled;
+    opacity: 1;
+
+  &[disabled],
+  fieldset[disabled] &
+    cursor: @cursor-disabled;
