Fixes SimpleDialog and TableListItem style

--- a/src/components/simpleDialog/SimpleDialog.styl
+++ b/src/components/simpleDialog/SimpleDialog.styl
@@ -1,3 +1,6 @@
+@import './../../design/styles/common/button.styl'
+@import './../../design/styles/common/global.styl'
+
 .simpleDialog
   position: fixed;
   top: 0px;
@@ -103,4 +106,3 @@
 
     .btn
       margin-left: 5px;
-
