--- a/src/components/tableList/TableListItem.styl
+++ b/src/components/tableList/TableListItem.styl
@@ -39,7 +39,8 @@
     flex: 1
     color: var(--text-secondary-color)
     font-weight: 400
-    margin-left: -2px
+    margin-left: 9px;
+    margin-top: 9px;
 
   .warning-icon
     display: none
