--- a/src/components/tableList/TableListItem.styl
+++ b/src/components/tableList/TableListItem.styl
@@ -14,8 +14,8 @@
     opacity 1
     .itemIndex
       color: $activeColor
-  
-  &.hasWarning 
+
+  &.hasWarning
     .warning
       display: block
 
@@ -24,19 +24,23 @@
     color: var(--text-secondary-color)
     cursor: pointer
     flex: 1
-    max-width: 40px
+    max-width: 25px
     transition(all 0.3s ease)
     font-size: 14px
     font-weight: 400
     margin-right: 5px
     padding: 10px
     text-align: center
+    -webkit-box-sizing: initial;
+    -moz-box-sizing: initial;
+    box-sizing: initial;
 
   .itemContent
     flex: 1
     color: var(--text-secondary-color)
     font-weight: 400
-    margin-left: -2px
-  
+    margin-left: 9px;
+    margin-top: 9px;
+
   .warning-icon
     display: none
