--- a/src/components/radioButtonList/RadioButtonList.css
+++ b/src/components/radioButtonList/RadioButtonList.css
@@ -28,7 +28,7 @@
   width: var(--radio-button-dim);
   height: var(--radio-button-dim);
   position: absolute;
-  top: 0;
+  top: 25%;
   left: 0;
   background-color: var(--ui-gray-lighter);
   border-radius: 50%;
@@ -62,6 +62,5 @@
 .ohif-radio-button-label {
   font-size: 12px;
   font-weight: 500;
-  justify-content: center;
   height: var(--height);
 }
