--- a/src/elements/form/Select.css
+++ b/src/elements/form/Select.css
@@ -1,86 +1,46 @@
-.dd-menu {
-  float: left;
-  margin-right: 10px;
-  cursor: pointer;
-  position: relative;
-  z-index: 999;
+.select-ohif {
+  display: block;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 0.8em;
+  font-weight: 600;
+  color: #444;
+  line-height: 1.3;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: 0.5em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right 0.7em top 50%, 0 0;
+  background-size: 0.65em auto, 100%;
 }
 
-.dd-title {
-  font-size: 13px;
+.select-ohif::-ms-expand {
+  display: none;
 }
 
-.dd-menu-toggle {
-  display: inline-block;
+.select-ohif:hover {
+  border-color: #888;
 }
 
-.dd-caret-down {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-top: 0.5rem;
-  margin-left: 0.5rem;
-  border-top: 5px solid;
-  border-right: 5px solid transparent;
-  border-left: 5px solid transparent;
+.select-ohif:focus {
+  border-color: #aaa;
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222;
+  outline: none;
 }
 
-.dd-menu-list {
-  position: absolute;
-  top: 100%;
-  margin-top: 10px;
-  background: white;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  overflow: hidden;
-  transition: all 300ms ease;
-  -webkit-transition: all 300ms ease;
-  -moz-transition: all 300ms ease;
-  -ms-transition: all 300ms ease;
-  -o-transition: all 300ms ease;
-}
-
-.dd-menu-list.open {
-  display: inline-block;
-}
-
-.dd-menu-list.left {
-  left: 0;
-}
-
-.dd-menu-list.right {
-  right: 0;
-}
-
-.dd-menu-list.center {
-  left: 50%;
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-}
-
-.dd-item {
-  display: flex;
-  color: var(--text-color-active);
-  padding: 10px 15px;
-  border-bottom: 1px solid #ccc;
-}
-
-.dd-item:hover {
-  text-decoration: none;
-  background: #eee;
-}
-
-.dd-item:last-child {
-  border-bottom: none;
-}
-
-.dd-item-icon {
-  margin-right: 10px;
-  margin-top: 2px;
+.select-ohif option {
+  font-weight: normal;
 }
