perf(DragPreview): Improves component performance
Improves component performance

fix #576

--- a/src/components/studyBrowser/StudyBrowser.styl
+++ b/src/components/studyBrowser/StudyBrowser.styl
@@ -5,6 +5,7 @@
   overflow: hidden
   background-color: black
   padding-bottom: 20px
+  padding-top: 10px
 
   .scrollable-study-thumbnails
     height: 100%
@@ -23,8 +24,7 @@
 
     .ThumbnailEntryContainer
       margin: 0 auto;
-      padding-top: 1rem
-      padding-bottom: 1.5rem
+      padding-bottom: 2.5rem;
 
 .draggable
   cursor: copy
