--- a/src/components/studyBrowser/StudyBrowser.styl
+++ b/src/components/studyBrowser/StudyBrowser.styl
@@ -26,6 +26,14 @@
       margin: 0 auto;
       padding-bottom: 2.5rem;
 
+      .noselect
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer */
+        -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
+        -webkit-user-select: none; /* Chrome, Safari, and Opera */
+        -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
+
+
 .draggable
   cursor: copy
   cursor: -webkit-grab
