fix(SelectTree): Fix select tree text position
Fix select tree text position

fix #508

--- a/src/components/selectTree/SelectTree.styl
+++ b/src/components/selectTree/SelectTree.styl
@@ -101,6 +101,7 @@
     border-bottom: 1px solid #ccc;
     height: 41px;
     line-height: 41px;
+    text-align: center;
 
   .radioLabel .radioInput
     display: none;
