--- a/src/components/layoutButton/LayoutChooser.styl
+++ b/src/components/layoutButton/LayoutChooser.styl
@@ -2,7 +2,7 @@
 
 $borderColor = rgba(77, 99, 110, 0.81)
 
-.dropdown-menu
+.layoutChooser-dropdown-menu
   position: absolute;
   top: 100%;
   left: 0;
