fix(styles): Fixes styles import to use correct global values

--- a/src/components/layoutButton/LayoutChooser.styl
+++ b/src/components/layoutButton/LayoutChooser.styl
@@ -1,4 +1,5 @@
 @import './../../design/styles/common/button.styl'
+@import './../../design/styles/common/global.styl'
 
 $borderColor = rgba(77, 99, 110, 0.81)
 
