--- a/src/components/cineDialog/CineDialog.styl
+++ b/src/components/cineDialog/CineDialog.styl
@@ -1,3 +1,5 @@
+@import './../../design/styles/common/global.styl'
+
 .CineDialog
   background: var(--ui-gray-darkest);
   color: var(--text-secondary-color);
