--- a/src/components/studyList/PaginationArea.styl
+++ b/src/components/studyList/PaginationArea.styl
@@ -11,6 +11,22 @@
         background-color: var(--primary-background-color)
         color: white
 
+  .row
+    display: flex;
+
+    .rows-dropdown
+      width: 25%;
+      padding-right: 15px;
+      padding-left: 15px;
+
+    .pagination-buttons
+      width: 75%;
+      padding-right: 15px;
+      padding-left: 15px;
+
+    .form-group
+      margin-bottom: 15px;
+
   .rows-per-page label.wrapperLabel
     display: inline-table !important
     margin: 0 4px
