--- a/src/design/styles/common/button.styl
+++ b/src/design/styles/common/button.styl
@@ -34,6 +34,12 @@
   border: 1px solid transparent;
   border-radius: 4px;
 
+.btn.disabled, .btn[disabled], fieldset[disabled] .btn
+  cursor: not-allowed;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  opacity: .65;
+
 button.close
   -webkit-appearance: none;
   padding: 0;
