Includes css class to replace bootstrap dependency

--- a/src/components/cineDialog/CineDialog.styl
+++ b/src/components/cineDialog/CineDialog.styl
@@ -1,4 +1,5 @@
 @import './../../design/styles/common/global.styl'
+@import './../../design/styles/common/form.styl'
 
 .CineDialog
   background: var(--ui-gray-darkest);
