--- a/src/design/styles/common/global.styl
+++ b/src/design/styles/common/global.styl
@@ -32,7 +32,13 @@
 .text-left
   text-align: left;
 
-h3
+h1
+  font-size: 36px;
+
+h3, h1
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
   margin-top: 20px;
   margin-bottom: 10px;
 
